--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,91 @@
+@import url('https://fonts.googleapis.com/css?family=Germania+One');
+
+html
+{
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(rgb(46, 46, 75), rgb(8, 7, 17));
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+}
+body
+{
+  color: white;
+  font-family: 'Germania One', cursive;
+}
+.header
+{
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 60px;
+}
+.title
+{
+  display: block;
+  font-size: 200%;
+  margin: 0 auto;
+  text-align: center;
+}
+.footer
+{
+  display: block;
+  position: fixed;
+  left: 0;
+  bottom: 30px;
+  width: 100%;
+  height: 30px;
+}
+#git
+{
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+button
+{
+  display: block;
+  width: 10%;
+  height: 20%;
+  margin: 0 auto;
+  margin-top: 20%;
+  background-color: rgba(95, 88, 156, 0.747);
+  border: 0px solid rgba(0,0,0,0);
+  color: white;
+  font-family: 'Germania One', cursive;
+  font-size: 200%;
+}
+
+#homeButton
+{
+    display: block;
+    position: fixed;
+    left: 5px;
+    top: 5px;
+    width: 50px;
+    height: 50px;
+    margin: 0px;
+    padding: 0px;
+    background-image: url("https://i.ibb.co/271mvDy/homesymbol-white-00000.png");
+    background-size: cover;
+}
+
+
+
+
 
 .white
 {
   background-color: rgb(231, 203, 165);
 }
-
 .black
 {
   background-color: rgb(158, 100, 61);
 }
-
 .block
 {
   display: block;
@@ -24,8 +101,6 @@
   justify-content: center;
   align-items: center;
 }
-
-
 .bb
 {
   background-image: url("../images/bb.png");
