--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,19 +49,30 @@ body
 }
 #menuButtons
 {
-  margin-top: 5%;
+  margin-top: 3%;
+}
+#loading
+{
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/loading.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 button
 {
   display: block;
-  width: 20%;
-  height: 10%;
+  width: 15%;
   margin: 0 auto;
   background-color: rgba(95, 88, 156, 0.747);
   border: 0px solid rgba(0,0,0,0);
   color: white;
   font-family: 'Germania One', cursive;
-  font-size: 250%;
+  font-size: 220%;
 }
 p.about
 {
@@ -76,28 +87,31 @@ p.about
 a.button
 {
   display: block;
-  width: 20%;
-  height: 10%;
+  width: 15%;
   margin: 0 auto;
   background-color: rgba(95, 88, 156, 0.747);
   border: 0px solid rgba(0,0,0,0);
   color: white;
   font-family: 'Germania One', cursive;
-  font-size: 250%;
+  font-size: 220%;
   text-decoration: none;
   text-align: center;
 }
 #menuTitle
 {
-  font-size: 500%;
+  font-size: 400%;
   display: block;
   text-align: center;
   margin: 0 auto;
-  margin-top: 15%;
+  margin-top: 10%;
 }
 button:hover
 {
-  background-color: rgba(116, 108, 194, 0.747);
+  background-color: rgba(137, 126, 230, 0.747);
+}
+a.button:hover
+{
+  background-color: rgba(137, 126, 230, 0.747);
 }
 
 #aboutbutton
@@ -114,8 +128,8 @@ button:hover
 }
 .add-margin
 {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
 }
 
 #homeButton
