--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,31 @@ button
   font-family: 'Germania One', cursive;
   font-size: 220%;
 }
+.optionButton
+{
+  display: block;
+  width: 140px;
+  margin: 0 auto;
+  background-color: rgba(95, 88, 156, 0.747);
+  border: 0px solid rgba(0,0,0,0);
+
+  font-family: 'Germania One', cursive;
+  font-size: 150%;
+}
+#top-bottom
+{
+  position: absolute;
+  display: flex;
+  left: 0px;
+  bottom: 70px;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
+#moveAssist
+{
+  color: white;
+}
 p.about
 {
   display: block;
@@ -198,15 +223,19 @@ a.button:hover
   height: 75px;
   margin: 0 auto;
 }
-#gameID
-{
+#gameID {
   font-size: 130%;
-  color: rgb(204, 204, 204);
+  color: white;
   font-family: 'Cairo', sans-serif;
   text-align: center;
   margin-bottom: 10px;
   font-weight: bolder;
   margin-top: 0px;
+  background-color: rgba(95, 88, 156, 0.747);
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 300px;
+  display: block;
 }
 .dead
 {
@@ -319,7 +348,7 @@ p
   position: absolute;
   display: flex;
   left: 0px;
-  bottom: 0px;
+  bottom: 20px;
   width: 100%;
   justify-content: space-evenly;
   align-items: baseline;
