--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,9 +180,27 @@ a.button:hover
 #topDiv
 {
   display: flex;
+  position: relative;
   margin: 0 auto;
   width: 562px;
   height: 172px;
+  background-color: rgba(95, 88, 156, 0.747);
+  border: 1px solid black;
+  margin-bottom: 50px;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
+}
+#addid
+{
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  width: 562px;
+  margin-top: 50px;
+  height: 120px;
   background-color: rgba(95, 88, 156, 0.747);
   border: 1px solid black;
   margin-bottom: 50px;
@@ -203,6 +221,13 @@ a.button:hover
   background-color: rgba(95, 88, 156, 0.747);
   border: 1px solid black;
   border-radius: 20px;
+}
+
+
+@media screen and (max-width: 600px) {
+    .one { order: 1; }
+    .two { order: 2;  }
+    .three { order: 3; }
 }
 .third
 {
@@ -388,6 +413,20 @@ p
   display: block;
   height: 30px;
   width: 168px;
+  margin: 0;
+  background-color: rgba(163, 163, 163, 0.541);
+  border: 0px;
+  margin-right: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 98%;
+  color: white;
+}
+
+#gameidtext
+{
+  display: block;
+  height: 30px;
+  width: 400px;
   margin: 0;
   background-color: rgba(163, 163, 163, 0.541);
   border: 0px;
